[project]
name = "claude-architect-cert-app"
version = "0.2.0"
description = "CCA-F Study Guide"
authors = [
    {name = "Mukilan Karthikeyan", email = "mukilankarthikeyan@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.58.0,<2.0.0)",
    "pdfplumber (>=0.11.10,<0.12.0)",
    "pypdf (>=6.13.2,<7.0.0)",
    "streamlit-pdf-viewer (>=0.0.29,<0.0.30)",
    "anthropic (>=0.109.2,<0.110.0)",
    "openai (>=1.50.0,<2.0.0)",
    "google-generativeai (>=0.8.0,<0.9.0)"
]

[project.optional-dependencies]
# Only needed when hosting in the cloud with DATABASE_URL set (see README's
# "Cloud Deployment & Session Persistence" section). Kept optional so the
# default local-file install stays lightweight.
postgres = ["psycopg2-binary (>=2.9,<3.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "ruff (>=0.15.22,<0.16.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*missing ScriptRunContext.*:UserWarning",
]

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E741"]

[tool.coverage.run]
omit = ["tests/*"]
